fix newsletter form alignment and error message alignment

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -546,3 +546,8 @@ $markdown-spacer: $markdown-font-size;
     transition: 200ms;
   }
 }
+
+.form-error-message {
+  bottom: -30px;
+  left: 25px;
+}
